[tool.poetry]
name = "suito-bot"
version = "0.1.0"
description = ""
authors = ["Rate980 <xv0nnj0@icloud.com>"]
readme = "README.md"
packages = [{include = "suito_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
line-bot-sdk = "^3.1.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
